--- a/css/style.css
+++ b/css/style.css
@@ -620,16 +620,8 @@ video {
   bottom: 10rem;
 }
 
-.left-2{
-  left: 0.5rem;
-}
-
 .left-40{
   left: 10rem;
-}
-
-.left-5{
-  left: 1.25rem;
 }
 
 .right-20{
@@ -640,28 +632,8 @@ video {
   top: 2.5rem;
 }
 
-.top-2{
-  top: 0.5rem;
-}
-
 .top-20{
   top: 5rem;
-}
-
-.m-10{
-  margin: 2.5rem;
-}
-
-.m-20{
-  margin: 5rem;
-}
-
-.m-52{
-  margin: 13rem;
-}
-
-.m-96{
-  margin: 24rem;
 }
 
 .m-4{
@@ -677,10 +649,6 @@ video {
   margin-bottom: 0.5rem;
 }
 
-.mb-3{
-  margin-bottom: 0.75rem;
-}
-
 .mb-4{
   margin-bottom: 1rem;
 }
@@ -693,24 +661,8 @@ video {
   margin-left: 0.75rem;
 }
 
-.ml-96{
-  margin-left: 24rem;
-}
-
-.mt-2{
-  margin-top: 0.5rem;
-}
-
 .mt-4{
   margin-top: 1rem;
-}
-
-.mr-96{
-  margin-right: 24rem;
-}
-
-.ml-52{
-  margin-left: 13rem;
 }
 
 .block{
@@ -725,20 +677,8 @@ video {
   display: flex;
 }
 
-.grid{
-  display: grid;
-}
-
 .hidden{
   display: none;
-}
-
-.h-10{
-  height: 2.5rem;
-}
-
-.h-16{
-  height: 4rem;
 }
 
 .h-32{
@@ -747,6 +687,10 @@ video {
 
 .h-5{
   height: 1.25rem;
+}
+
+.h-52{
+  height: 13rem;
 }
 
 .h-6{
@@ -761,24 +705,16 @@ video {
   height: 1.75rem;
 }
 
-.h-8{
-  height: 2rem;
-}
-
 .h-auto{
   height: auto;
 }
 
+.h-hcustom{
+  height: 50%;
+}
+
 .min-h-screen{
   min-height: 100vh;
-}
-
-.w-10{
-  width: 2.5rem;
-}
-
-.w-16{
-  width: 4rem;
 }
 
 .w-5{
@@ -793,12 +729,12 @@ video {
   width: 1.75rem;
 }
 
-.w-8{
-  width: 2rem;
-}
-
 .w-auto{
   width: auto;
+}
+
+.w-custom{
+  width: 50%;
 }
 
 .w-full{
@@ -825,12 +761,8 @@ video {
   flex: 1 1 0%;
 }
 
-.transform{
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.grid-cols-1{
-  grid-template-columns: repeat(1, minmax(0, 1fr));
+.cursor-pointer{
+  cursor: pointer;
 }
 
 .flex-col{
@@ -839,10 +771,6 @@ video {
 
 .items-center{
   align-items: center;
-}
-
-.justify-start{
-  justify-content: flex-start;
 }
 
 .justify-end{
@@ -855,10 +783,6 @@ video {
 
 .justify-between{
   justify-content: space-between;
-}
-
-.gap-1{
-  gap: 0.25rem;
 }
 
 .gap-4{
@@ -899,10 +823,6 @@ video {
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
 
-.overflow-hidden{
-  overflow: hidden;
-}
-
 .rounded-2xl{
   border-radius: 1rem;
 }
@@ -919,16 +839,8 @@ video {
   border-width: 1px;
 }
 
-.border-2{
-  border-width: 2px;
-}
-
 .border-b-4{
   border-bottom-width: 4px;
-}
-
-.border-dashed{
-  border-style: dashed;
 }
 
 .border-none{
@@ -940,14 +852,14 @@ video {
   border-color: rgb(172 169 187 / var(--tw-border-opacity));
 }
 
-.border-gray-300{
-  --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity));
-}
-
 .bg-black{
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-blue-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
 }
 
 .bg-blue-600{
@@ -970,6 +882,21 @@ video {
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
 
+.bg-green-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+
+.bg-green-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
+}
+
+.bg-red-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
 .bg-teal-500{
   --tw-bg-opacity: 1;
   background-color: rgb(20 184 166 / var(--tw-bg-opacity));
@@ -978,26 +905,6 @@ video {
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-gray-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
-}
-
-.bg-blue-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
-}
-
-.bg-red-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}
-
-.bg-green-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-50{
@@ -1100,10 +1007,6 @@ video {
   font-weight: 700;
 }
 
-.font-medium{
-  font-weight: 500;
-}
-
 .font-semibold{
   font-weight: 600;
 }
@@ -1141,6 +1044,11 @@ video {
 .text-gray-900{
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
+.text-red-500{
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .text-teal-500{
@@ -1207,20 +1115,10 @@ video {
   --tw-ring-color: rgb(209 213 219 / var(--tw-ring-opacity));
 }
 
-.filter{
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
 .transition{
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.transition-all{
-  transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -1240,10 +1138,9 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-.hover\:scale-105:hover{
-  --tw-scale-x: 1.05;
-  --tw-scale-y: 1.05;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+.hover\:bg-blue-600:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-blue-700:hover{
@@ -1256,6 +1153,26 @@ video {
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-green-600:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-green-700:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(21 128 61 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-purple-600:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(147 51 234 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-red-600:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-teal-300:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(94 234 212 / var(--tw-bg-opacity));
@@ -1266,34 +1183,9 @@ video {
   background-color: rgb(45 212 191 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-blue-600:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-red-600:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-purple-600:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(147 51 234 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-teal-600:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(13 148 136 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-green-700:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(21 128 61 / var(--tw-bg-opacity));
-}
-
-.hover\:text-blue-500:hover{
-  --tw-text-opacity: 1;
-  color: rgb(59 130 246 / var(--tw-text-opacity));
 }
 
 .hover\:text-gray-700:hover{
@@ -1304,16 +1196,6 @@ video {
 .hover\:text-gray-800:hover{
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
-}
-
-.hover\:text-green-500:hover{
-  --tw-text-opacity: 1;
-  color: rgb(34 197 94 / var(--tw-text-opacity));
-}
-
-.hover\:text-red-500:hover{
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .hover\:text-white:hover{
@@ -1348,10 +1230,6 @@ video {
 }
 
 @media (min-width: 380px){
-  .xs\:relative{
-    position: relative;
-  }
-
   .xs\:left-52{
     left: 13rem;
   }
@@ -1362,10 +1240,6 @@ video {
 }
 
 @media (min-width: 500px){
-  .sm\:left-1{
-    left: 0.25rem;
-  }
-
   .sm\:left-60{
     left: 15rem;
   }
@@ -1384,10 +1258,6 @@ video {
 }
 
 @media (min-width: 768px){
-  .md\:left-1{
-    left: 0.25rem;
-  }
-
   .md\:flex{
     display: flex;
   }
@@ -1396,16 +1266,8 @@ video {
     display: none;
   }
 
-  .md\:h-20{
-    height: 5rem;
-  }
-
   .md\:w-12{
     width: 3rem;
-  }
-
-  .md\:w-20{
-    width: 5rem;
   }
 
   .md\:flex-row{
@@ -1428,11 +1290,5 @@ video {
 
   .lg\:w-16{
     width: 4rem;
-  }
-}
-
-@media (min-width: 1280px){
-  .xl\:left-1{
-    left: 0.25rem;
   }
 }
